// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Label /> should adopt the "isSelected" property 1`] = `
.c0 {
  display: inline-block;
  margin-left: 1rem;
  font-size: 1rem;
  white-space: nowrap;
}

.c0::after {
  content: "✓";
  margin-left: 0.5em;
}

<span
  className="c0"
/>
`;

exports[`<Label /> should render and match the snapshot 1`] = `
.c0 {
  display: inline-block;
  margin-left: 1rem;
  font-size: 1rem;
  white-space: nowrap;
}

.c0::after {
  content: "";
  margin-left: 0.5em;
}

<span
  className="c0"
/>
`;
